data/derived/comb/progs/unify/prog1394.ml.out
Characters 4-13:
  eval(Sine(0));;
      ^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
